MDEV-7088: Query stats for compression based on TRIM size

Analysis: Status variables were missing from innodb_status_variables
array.

Fix: Add missing status variables to the array.